--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --cor-fundo: tomato;
+}
+
+
 *{
     padding: 0;
     margin: 0;
@@ -10,7 +15,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    background-color: var(--cor-fundo);
+    transition: 1s;
 }
 
 #cor{
